# equations

./: .gitignore  CMakeLists.txt  Makefile  TODO.txt
src/: CMakeLists.txt  CalculateRPN.cpp  CalculateRPN.h  Monomial.cpp  Monomial.h  Operation.h  ParseRPN.h  Polynomial.cpp  Polynomial.h  Variable.cpp  Variable.h  Z.h  main.cpp
test/: CMakeLists.txt  monomial_unittest.cpp  polynomial_unittest.cpp  test.cpp  variable_unittest.cpp  zp_unittest.cpp
